# datafusion-orc-extension

./: Cargo.toml  README.md
benches/: orc_query_sql.rs
docs/: cargo_bench.md  tpcds_benchmark_plan.md
scripts/: README.md  convert_tpcds_to_orc.py  generate_tpcds_orc.py
src/: file_format.rs  lib.rs  metadata.rs  opener.rs  predicate.rs  reader.rs  source.rs
tests/: basic_reading.rs  predicate_pushdown.rs
